--- a/package.json
+++ b/package.json
@@ -14,16 +14,11 @@
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
-    "@firebase/performance": "^0.7.6",
-    "@fontsource/roboto": "^5.2.5",
     "@giphy/js-fetch-api": "^5.6.0",
     "@giphy/react-components": "^10.0.1",
-    "@mdx-js/react": "^3.1.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
-    "@mui/styled-engine-sc": "^7.0.1",
     "@mui/x-date-pickers": "^8.0.0-beta.3",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-select": "^2.1.7",
@@ -31,53 +26,52 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@react-oauth/google": "^0.12.1",
-    "@reduxjs/toolkit": "^2.6.1",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.1.0",
-    "@tailwindcss/vite": "^4.1.2",
     "axios": "^1.8.4",
-    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
-    "currency-codes": "^2.2.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "emoji-mart": "^5.6.0",
     "firebase": "^11.8.1",
-    "framer-motion": "^12.7.1",
     "jquery": "^3.7.1",
-    "jquery-ui": "^1.14.1",
-    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
-    "quill": "^2.0.3",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-country-flag": "^3.1.0",
     "react-country-flags-select": "^1.1.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0",
-    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.30.0",
+    "react-router": "^7.6.3",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
-    "react-world-flags": "^1.6.0",
-    "rehype-raw": "^7.0.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.17",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.2"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/postcss": "^4.1.4",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "@babel/eslint-parser": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@eslint/js": "^9.30.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^16.3.0",
+    "sharp": "^0.34.3",
+    "svgo": "^4.0.0",
+    "tailwindcss": "^4.1.11",
+    "terser": "^5.43.1",
+    "vite": "^7.0.4",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-image-optimizer": "^2.0.2"
   }
 }
