--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ dist
 dist-ssr
 *.local
 .env
+collection.txt
+rule.txt
 
 # Editor directories and files
 .vscode/*
@@ -28,6 +30,5 @@ dist-ssr
 # Credentials and secrets
 credentials.json
 *.credentials.json
-collection.txt
 
 .vercel
